--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "koa-router": "^11.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.18",
-    "pdfjs-dist": "*"
+    "pdfjs-dist": "*",
+    "pino": "^8.1.0"
   }
 }
