--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "pdf_parser_server",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node":"17.x"
+  },
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
